<resources>
    <string name="app_name">Single Vendor App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="home_title">Home</string>
    <string name="pizzas_title">Pizzas</string>
    <string name="burgers_title">Burgers</string>
    <string name="rolls_title">Rolls</string>
    <string name="drinks_title">Drinks</string>
    <string name="fav_image">Favorite Image</string>
    <string name="placeholder_fav_title">Pepperoni Pizza</string>
    <string name="remove_fav">Remove</string>
    <string name="empty_cart">Cart is Empty!</string>
    <string name="slideViewHandleDesc">Slide View Handle</string>
    <string name="no_of_items_slideview">3 Items in Your Cart</string>
    <string name="price_placeholder">Rs. 3340</string>
    <string name="name_placeholder">Name</string>
    <string name="phone_placeholder">Phone No.</string>
    <string name="address_placeholder">Address</string>
</resources>