<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:padding="@dimen/_8sdp">

    <TextView
        android:id="@+id/checkout_dialog_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="@font/balsamiq_sans_bold"
        android:text="Enter details to proceed"
        android:textSize="@dimen/_16ssp" />


    <EditText
        android:id="@+id/checkout_dialog_name"
        style="@style/checkout_dialog_editText_style"
        android:layout_below="@id/checkout_dialog_heading"
        android:hint="@string/name_placeholder"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/checkout_dialog_phone"
        style="@style/checkout_dialog_editText_style"
        android:layout_below="@id/checkout_dialog_name"
        android:hint="@string/phone_placeholder"
        android:inputType="phone" />

    <EditText
        android:id="@+id/checkout_dialog_address"
        style="@style/checkout_dialog_editText_style"
        android:layout_below="@id/checkout_dialog_phone"
        android:hint="@string/address_placeholder"
        android:inputType="text" />

</RelativeLayout>