<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_8sdp"
    android:elevation="@dimen/_8sdp"
    app:cardCornerRadius="@dimen/_8sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/favorite_image"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginVertical="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:contentDescription="@string/fav_image"
            android:src="@drawable/testpizza" />

        <TextView
            android:id="@+id/favorite_title"
            style="@style/product_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/balsamiq_sans_bold"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_toEndOf="@+id/favorite_image"
            android:text="@string/placeholder_fav_title" />

        <RatingBar
            android:id="@+id/favorite_ratingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/favorite_title"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_toEndOf="@id/favorite_image"
            android:isIndicator="true" />

        <TextView
            android:id="@+id/favorite_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/favorite_title"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_toEndOf="@id/favorite_ratingBar"
            android:text="Rs. 230"
            android:textColor="#3FA83F"
            android:textStyle="bold" />

            <ImageButton
                android:id="@+id/favorite_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/remove_fav"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_12sdp"
                android:elevation="@dimen/_16sdp"
                android:src="@drawable/cart_delete_icon"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tooltipText="@string/remove_fav"
                app:tint="#989898" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>