<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_8sdp"
    android:elevation="@dimen/_8sdp"
    app:cardCornerRadius="@dimen/_8sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cart_item_image"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginVertical="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:contentDescription="@string/fav_image"
            android:src="@drawable/testpizza" />

        <TextView
            android:id="@+id/cart_item_title"
            style="@style/product_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_toEndOf="@+id/cart_item_image"
            android:fontFamily="@font/balsamiq_sans_bold"
            android:text="@string/placeholder_fav_title" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cart_item_title"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_toStartOf="@+id/cart_item_remove"
            android:layout_toEndOf="@id/cart_item_image">

            <LinearLayout
                android:id="@+id/cart_quantity_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:text="Quantity"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cart_item_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="21"
                    android:textColor="#3FA83F"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cart_unitPrice_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_toEndOf="@id/cart_quantity_layout"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:text="Unit Price"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cart_item_unitPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rs. 230"
                    android:textColor="#3FA83F"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cart_totalPrice_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/cart_unitPrice_layout"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:text="Total Price"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cart_item_totalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rs. 2422"
                    android:textColor="#3FA83F"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

        <ImageButton
            android:id="@+id/cart_item_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_12sdp"
            android:contentDescription="@string/remove_fav"
            android:elevation="@dimen/_16sdp"
            android:src="@drawable/cart_delete_icon"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tooltipText="@string/remove_fav"
            app:tint="#989898" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>